; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/ap/extr_ap_drv_ops.c_hostapd_free_ap_extra_ies.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/ap/extr_ap_drv_ops.c_hostapd_free_ap_extra_ies.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hostapd_data = type { i32 }
%struct.wpabuf = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @hostapd_free_ap_extra_ies(%struct.hostapd_data* %0, %struct.wpabuf* %1, %struct.wpabuf* %2, %struct.wpabuf* %3) #0 {
  %5 = alloca %struct.hostapd_data*, align 8
  %6 = alloca %struct.wpabuf*, align 8
  %7 = alloca %struct.wpabuf*, align 8
  %8 = alloca %struct.wpabuf*, align 8
  store %struct.hostapd_data* %0, %struct.hostapd_data** %5, align 8
  store %struct.wpabuf* %1, %struct.wpabuf** %6, align 8
  store %struct.wpabuf* %2, %struct.wpabuf** %7, align 8
  store %struct.wpabuf* %3, %struct.wpabuf** %8, align 8
  %9 = load %struct.wpabuf*, %struct.wpabuf** %6, align 8
  %10 = call i32 @wpabuf_free(%struct.wpabuf* %9)
  %11 = load %struct.wpabuf*, %struct.wpabuf** %7, align 8
  %12 = call i32 @wpabuf_free(%struct.wpabuf* %11)
  %13 = load %struct.wpabuf*, %struct.wpabuf** %8, align 8
  %14 = call i32 @wpabuf_free(%struct.wpabuf* %13)
  ret void
}

declare dso_local i32 @wpabuf_free(%struct.wpabuf*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
